--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "capsize-sass",
+  "name": "capsize-scss",
   "version": "1.0.0",
   "description": "> Capsize makes the sizing and layout of text as predictable as every other element on the screen. > > Using font metadata, text can now be sized according to the height of its capital letters while trimming the space above capital letters and below the baseline.",
   "main": "src/index.js",
